<resources>
    <string name="app_name">Погода</string>
    <string name="headline">Выберите город:</string>
    <string name="picture_background">Фон риложения</string>
    <string name="today">Сегодня</string>

    <string name="city_database_search">Поиск по базе</string>
    <string name="city_geo_search">Поиск по гео</string>

    <string-array name="cities">
        <item>Санкт-Петербург</item>
        <item>Москва</item>
        <item>Ростов-на-дону</item>
        <item>Сочи</item>
    </string-array>

    <string name="temp_tab">Темп.°C</string>
    <string name="wind_tab">Ветер</string>
    <string name="pressure_tab">Давление</string>
    <string name="humidity_tab">Влажн.%</string>
    <string name="show_weather">Узнать погоду</string>
    <string name="temperature">Температура</string>
    <string name="wind">Ветер</string>
    <string name="wind_measure">м/с</string>
    <string name="pressure">Давление</string>
    <string name="pressure_measure">мм</string>
    <string name="humidity">Влажность</string>
    <string name="humidity_measure">%</string>

    <string-array name="day_of_week">
        <item>Воскресенье</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="month">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string name="one_day_string">1 день</string>
    <string name="five_days_string">5 дней</string>
    <string name="options_menu_description">Прогноз погоды на:</string>

    <string name="error_weather_parcer_null">Ошибка! WeatherParcer дал результат null!</string>
    <string name="app_contacts">example@mail.ru</string>
    <string name="nav_support">Поддержка</string>
    <string name="about_developer">О разработчике</string>
    <string name="change_background">Изменить картинку фона</string>
    <string name="nav_feedback">Обратная связь</string>
    <string name="nav_edit_background">Изменить фон</string>
    <string name="nav_selected_cities">Выбранные города</string>
    <string name="nav_open_drawer">Открыть боковую панель</string>
    <string name="nav_close_drawer">Закрыть боковую панель</string>
    <string name="developer_email">strikalov.aleksandr@yandex.ru</string>
    <string name="topic_feedback">Тема</string>
    <string name="text_feedback">Текст</string>
    <string name="send_feedback">Отправить</string>
    <string name="after_click_send_feedback">Сообщение отправлено</string>

    <string name="temperature_sensor">Температурный датчик</string>
    <string name="sensor_null">Датчик отсутствует\n на устройстве</string>
    <string name="sensor_value_is">Показания датчика:</string>
    <string name="humidity_sensor">Датчик влажности</string>

    <string name="temperature_measure">°C</string>
    <string name="share_for_friends">Рассказать друзьям</string>
    <string name="chooser">Отправить сообщение через ...</string>

    <string name="sky">Небо</string>
    <string name="forest">Лес</string>
    <string name="desert">Пустыня</string>
    <string name="christmas">Рождество</string>
    <string name="sea">Море</string>
    <string name="mountains">Горы</string>
    <string name="accept">Подтвердить</string>
    <string name="picture_updated">Картинка обновлена!</string>

    <string name="nav_settings_name">Настройки</string>
    <string name="settings_measure_units_name">Единицы измерения</string>
    <string name="settings_wind_speed_name">Скорость ветра</string>
    <string name="settings_temperature_name">Температура</string>
    <string name="settings_pressure_name">Атм. давление</string>
    <string name="settings_radio_meters_name">м/с</string>
    <string name="settings_radio_kilometers_name">км/ч</string>
    <string name="settings_radio_celsius_name">С°</string>
    <string name="settings_radio_fahrenheit_name">F°</string>
    <string name="settings_radio_mm_name">мм</string>
    <string name="settings_radio_hpa_name">hPa</string>

    <string name="render_temperature_measure_celsius">°C</string>
    <string name="render_temperature_measure_fahrenheit">°F</string>
    <string name="render_wind_measure_meters">м/с</string>
    <string name="render_wind_measure_kilometers">км/ч</string>
    <string name="render_pressure_measure_mm">мм</string>
    <string name="render_pressure_measure_hpa">hPa</string>
    <string name="render_humidity_measure">%</string>

    <string name="show_download_progress">Ожидаем ответ от сервера...</string>
    <string name="show_download_databse_text">Загрузка базы данных...</string>
    <string name="selected_cities_emppty">Вы еще не добавляли городов в базу</string>

    <string name="search_city_in_data">Поиск города по базе</string>
    <string name="search_in_data">Поиск по базе:</string>
    <string name="accept_city">Подтвердить</string>
    <string name="city_is_not_found">Город не найден в базе</string>
    <string name="city_accept_wait">Подождите, идет сохранение...</string>
    <string name="city_is_accepted">Город подтвержден</string>
    <string name="city_is_not_accepted">Город не выбран! Выберите город!</string>

    <string name="selected_cities">Выбранные города</string>
    <string name="selected_cities_refresh_all">Обновить все</string>
    <string name="selected_cities_add_city">Добавить город</string>

    <string name="find_geo_position">Поиск по геопозиции</string>
    <string name="city_was_find">Местоположение определено</string>
    <string name="search_satellite">Идет поиск спутников...</string>
    <string name="after_satellite_server_connections">Спутник найден. Ожидаем ответ от сервера...</string>
    <string name="search_satellite_not_available">Определение геолокации в данный момент не доступно.</string>
    <string name="satellite_no_permission">Предоставьте приложению разрешение на определение геолокации.</string>
    <string name="ask_geo_message">Для лучшего определения геоданных пожалуйста, включите на устройстве геолокацию.</string>
    <string name="button_geo_turn_on">Включить</string>
    <string name="button_geo_no">Нет, спасибо</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
