<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_backgroud"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_edit_background" />
    <item
        android:id="@+id/nav_temperature_sensor"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/temperature_sensor" />

    <item
        android:id="@+id/nav_humidity_sensor"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/humidity_sensor" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings_name"/>

    <item
        android:id="@+id/nav_selected_cities"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_selected_cities" />

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_about_developer"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about_developer" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>