<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:text="@string/settings_measure_units_name" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/settings_wind_speed_name" />

            <TextView
                android:id="@+id/text_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_wind"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/settings_temperature_name" />

            <TextView
                android:id="@+id/text_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_temperature"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/settings_pressure_name" />

            <RadioGroup
                android:id="@+id/wind_speed_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_meters"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:onClick="onRadioButtonWindSpeedGroupClicked"
                    android:text="@string/settings_radio_meters_name" />

                <RadioButton
                    android:id="@+id/radio_kilometers"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:onClick="onRadioButtonWindSpeedGroupClicked"
                    android:text="@string/settings_radio_kilometers_name" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/temperature_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/wind_speed_group"
                android:layout_toEndOf="@id/text_temperature"
                android:layout_alignLeft="@+id/wind_speed_group"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_celsius"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:onClick="onRadioButtonTemperatureGroupClicked"
                    android:text="@string/settings_radio_celsius_name" />

                <RadioButton
                    android:id="@+id/radio_fahrenheit"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:onClick="onRadioButtonTemperatureGroupClicked"
                    android:text="@string/settings_radio_fahrenheit_name" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/pressure_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/temperature_group"
                android:layout_toEndOf="@id/text_pressure"
                android:layout_alignLeft="@+id/wind_speed_group"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_mm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:onClick="onRadioButtonPressureGroupClicked"
                    android:text="@string/settings_radio_mm_name" />

                <RadioButton
                    android:id="@+id/radio_hpa"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:onClick="onRadioButtonPressureGroupClicked"
                    android:text="@string/settings_radio_hpa_name" />

            </RadioGroup>

        </RelativeLayout>

        </LinearLayout>

</LinearLayout>